GTP extension header is implemented as a packet
Signed-off-by: Leo Ma <leo.ma@ericsson.com>